added report menu by user

--- a/CrystalReportMVC/Views/Customer/Index.cshtml
+++ b/CrystalReportMVC/Views/Customer/Index.cshtml
@@ -12,7 +12,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 
-    <div><a href="@Url.Action("ExportCustomers")"> Report PDF </a></div>
+    <div><a href="@Url.Action("ExportCustomers")"> Export Customers </a></div>
+    <div><a href="@Url.Action("ExportCustomersFromDB")"> Export Customers From DB </a></div>
+    <div><a href="@Url.Action("ExportMenuByCustomer")"> Export Menu By Customer </a></div>
 
 </p>
 <table class="table">
