added new types of report

--- a/CrystalReportMVC/Views/Customer/Index.cshtml
+++ b/CrystalReportMVC/Views/Customer/Index.cshtml
@@ -15,7 +15,9 @@
     <div><a href="@Url.Action("ExportCustomers")"> Export Customers </a></div>
     <div><a href="@Url.Action("ExportCustomersFromDB")"> Export Customers From DB </a></div>
     <div><a href="@Url.Action("ExportMenuByCustomer")"> Export Menu By Customer </a></div>
-
+    <div><a href="@Url.Action("ExportMenuByCustomer2")"> Export Menu By Customer2 </a></div>
+    <div><a href="@Url.Action("ExportMenuByCustomer3")"> Export Menu By Customer3 </a></div>
+    <div><a href="@Url.Action("ExportMenuByCustomer4")"> Export Menu By Customer4 </a></div>
 </p>
 <table class="table">
     <tr>
