--- a/CrystalReportMVC/Views/Customer/Index.cshtml
+++ b/CrystalReportMVC/Views/Customer/Index.cshtml
@@ -19,7 +19,7 @@
     <div><a href="@Url.Action("ExportMenuByCustomer4")"> Export Menu By Customer4 </a></div>
 </p>
 
-<form action="@Url.Action("ExportMenuByCustomer2")" method="post">
+<form action="@Url.Action("ExportMenuByCustomer2")" method="get">
     @Html.AntiForgeryToken()
     <div class="form-group">
         <div class="col-md-10">
